mobile menu alignment fix

--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ footer {
   menu {
     flex-direction: column;
     gap: 4rem;
+    padding: 0;
   }
   li {
     color: var(--primary-color) !important;
@@ -203,7 +204,7 @@ footer {
   right: 1rem;
   img {
     width: 10vw;
-    max-width: 4rem;
+    max-width: 5rem;
     animation: jellyScale infinite 1.2s linear;
   }
 }
